--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "es6": true
@@ -19,6 +19,7 @@ module.exports = {
         "react"
     ],
     "rules": {
-        "react/jsx-filename-extension":0
+        "react/jsx-filename-extension":0,
+        "linebreak-style": 0
     }
-};
+}
